Fixed dark mode hover styles

--- a/web/profiles/custom/yalesites_profile/modules/custom/ys_embed/css/LibCal.css
+++ b/web/profiles/custom/yalesites_profile/modules/custom/ys_embed/css/LibCal.css
@@ -156,3 +156,7 @@ button:is(.s-lc-w-previous, .s-lc-w-next):before {
 button:is(.s-lc-w-next):before {
   content: '→';
 }
+
+.gin--dark-mode .embed-libcal :hover, .gin--dark-mode .embed-libcal tr:focus-within {
+  color:inherit;
+}
